src/tests/TodoList/errors/TheTodoDoesNotExist.ts
import { CustomError } from '../../../lib'

export default CustomError<'TheTodoDoesNotExist'>({
  name: 'TheTodoDoesNotExist',
})
